# ros2-ur5e-vision-pick-place

./: .gitignore  README.md
src/: run_IR_codes.txt
src/conveyor_cam/: package.xml  setup.cfg  setup.py  webcamera.yaml
src/conveyor_cam/conveyor_cam/: box_subscriber.py  box_tracker.py  box_tracker_robot_publisher.py
src/motion/: CMakeLists.txt  inverse.cpp  package.xml
src/motion/launch/: full_ir_project.launch.py  full_ir_project_terminals.launch.py
src/motion/src/: cartesian_pick_place.cpp  conveyor_speed_estimator.cpp  inverse.cpp
src/ur5e_grip_run/: package.xml  setup.cfg  setup.py
src/ur5e_grip_run/ur5e_grip_run/: joint_commander.py
src/ur5e_grip_run_cpp/: CMakeLists.txt  package.xml
src/ur5e_grip_run_cpp/src/: joint_commander_ik.cpp
src/ur_target_motion/: CMakeLists.txt  package.xml
src/ur_target_motion/launch/: move_to_pose_rpy.launch.py
src/ur_target_motion/src/: move_to_point.cpp  move_to_pose_rpy.cpp  pick_place_node.cpp
