<?xml version="1.0"?>
<package format="3">
  <name>ur_target_motion</name>
  <version>0.0.0</version>
  <description>UR5e target motion and pick place nodes</description>

  <maintainer email="amr@todo.todo">amr</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
